2006-01-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegates/spellcheck.py:
	  (SpellCheckDelegate._on_page_checked): Call replace_both_texts only
	  if both texts are non-empty lists.

	* lib/gaupol/gtk/dialogs/spellcheck.py:
	  (SpellCheckDialog): Use brokers, one for main and one for translation
	  texts. Fixed a few typos.

2005-12-31  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/action.py:
	  (ActionDelegate._revert_multiple): Removed unused variable row_count.

2005-12-31  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/action.py:
	* lib/gaupol/gtk/dialogs/encoding.py:
	* lib/gaupol/gtk/dialogs/multiclose.py:
	  Fixed typos.

	* lib/gaupol/gtk/delegates/action.py:
	* lib/gaupol/gtk/delegates/help.py:
	* lib/gaupol/gtk/dialogs/multiclose.py:
	  Fixed all remaining gaupol.gtk.util.gui imports.

	* lib/gaupol/gtk/delegates/action.py:
	  (ActionDelegate._show_updated_data): Return if changed_rows is a
	  blank list.

	* lib/gaupol/gtk/dialogs/debug.py:
	  (DebugDialog._on_text_view_motion_notify_event): Call
	  self._text_view.window_to_buffer_coords to get correct coordinates in
	  case text view has been scrolled down.

	* lib/gaupol/gtk/util/gtklib.py:
	  Readded gtk.main_iteration() while gtk.events_pending() calls to
	  cursor changing functions.

2005-12-31  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/util/gtklib.py:
	  Renamed from lib/gaupol/gtk/util/gui.py.
	  Fixed all references.

	* lib/gaupol/gtk/delegates/spellcheck.py:
	  Fixed Action constant importing now that namespaces don't collide.

2005-12-31  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* MANIFEST.in:
	  Readded the .mo files.

	* lib/gaupol/base/util/encodinglib.py:
	* lib/gaupol/base/util/langlib.py:
	* lib/gaupol/gtk/delegates/appupdate.py:
	* lib/gaupol/gtk/delegates/guiinit.py:
	* lib/gaupol/gtk/delegates/help.py:
	* lib/gaupol/gtk/delegates/menuupdate.py:
	* lib/gaupol/gtk/delegates/viewupdate.py: